<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graphs</string>
    <string name="action_settings">Settings</string>
    <string name="action_load">Load Graph</string>
    <string name="action_save">Save Graph</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_kruskal">Minimum spanning tree</string>
    <string name="action_bipartite">See bipartition</string>
    <string name="action_tableinfo">Information graph</string>
    <string name="action_clear">Clear</string>
    <string name="action_iso">Enable Isomorphism tool</string>
    <string name="action_distance_table">Show table with distances</string>
    <string name="separator">Dividing line</string>
    <string name="file_titlesave">Save graph</string>
    <string name="file_hint">Graph</string>
    <string name="file_extension">.graph</string>
    <string name="file_save">Save</string>
    <string name="file_cancel">Cancel</string>
    <string name="text_vertex">Vertex</string>
    <string name="text_edges">Edges</string>
    <string name="text_components">Connected components</string>
    <string name="text_bipartite">Bipartite</string>
    <string name="text_sumofdistances">Sum of distances</string>
    <string name="text_regular">Regular</string>
    <string name="text_secuence">Sequence degrees</string>
    <string name="text_separator">:</string>
    <string name="text_zoompos">Scale of the graph</string>
    <string name="text_percent">%</string>
    <string name="text_zoomvertex">Scalar vertex</string>

</resources>
