<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/action_remove"/>
    
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:actionLayout="@layout/edit_weight_layout"/>
    
    <item 
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_load"/>
    
    <item 
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"/>
    
    <group android:checkableBehavior="all">
        
    <item
        android:id="@+id/action_bipartit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_bipartite"
        android:checkable="true"
        android:enabled="false"/>
    
    <item
        android:id="@+id/action_kruskal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_kruskal"
        android:checkable="true"
        android:enabled="false"/>
    
    <item
        android:id="@+id/action_iso"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_iso"
        android:checkable="true"/>
    
    </group>
    
    <item
        android:id="@+id/action_distance_table"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_distance_table"/>
    
    <item
        android:id="@+id/action_tableinfo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_tableinfo"/>
    
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>